header fixed on mobile

--- a/src/styles/less/animations.less
+++ b/src/styles/less/animations.less
@@ -134,17 +134,18 @@
     &.active {
         background: @secondaryColor;
         color: @mainColor;
+        height: @buttonHeight + 1px;
         transform: translateY(20px);
         pointer-events: none;
-        height: @buttonHeight + 1px;
+
+        @media @mobile {
+            height: auto;
+            transform: translateY(14px);
+        }
 
         &:before,
         &:after {
             width: 100%;
-        }
-
-        @media @mobile {
-            transform: translateY(14px);
         }
     }
 }
