--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -240,7 +240,6 @@ header {
             vertical-align: middle;
             cursor: pointer;
             position: relative;
-            //font-family: Buttons;            
             font-family: Linee;
             letter-spacing: 2vw;
             text-indent: 2vw;
@@ -259,24 +258,6 @@ header {
             }
         }
     }
-
-    // .repository-link {
-    //     cursor: pointer;
-    //     position: absolute;
-    //     top: 2px;
-    //     left: 7px;
-    //     text-decoration: none;
-    //     display: inline-block;
-    //     color: #FFF;
-
-    //     @media @mobile {
-    //         font-size: 0.65em;
-    //         top: 0;
-    //         left: 2px;
-    //     }
-
-    //     .underline-animation(@app-basic-lightblue);
-    // }
 
     .menu {
         display: flex;
@@ -310,7 +291,6 @@ header {
         .menu-button {
             width: calc(100% / 3);
             display: inline-block;
-            // font-size: 1.2em;
             font-weight: bold;
             height: 41px;
             line-height: 41px;
@@ -320,7 +300,6 @@ header {
             .button-effect-lines(@mainColor: @app-basic-lightblue, @secondaryColor: @app-bg-gray, @buttonHeight: 41px);
 
             @media @mobile {
-                // font-size: 0.85em;
                 height: 30px;
                 line-height: 30px;
                 margin: 0 3%;
@@ -431,13 +410,10 @@ main {
 
             p,
             li {
-                font-size: 0.95em;
-                // font-family: 'Courier New',
-                //     Courier,
-                //     monospace;
+                font-size: 1.05rem;
 
                 @media @mobile {
-                    font-size: 0.9em;
+                    font-size: 0.9rem;
                 }
             }
         }
